2012-03-20  kitone  <kitone@gna.org>

	* TODO:
	* src/vp/gstplayer.cc:
	using set_property insted of g_object_set. Small MacOS X fixes.

2012-02-23  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2012-02-22  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.40.0 release.

2012-02-22  kitone  <kitone@gna.org>

	* src/gui/dialogfilechooser.cc:
	Fix bug #19268 : File Open: display uppercase extensions in file open dialog.

2012-02-22  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	* src/defaultcfg.cc:
	Ability to seek tiny. Pach by Sebastián Ventura <lomegor at gmail dot com>.

2011-11-20  kitone  <kitone@gna.org>

	* src/subtitleview.cc:
	Fix bug #19023 : Assenseur / ligne active. Center in the view the current selection.

2011-11-19  kitone  <kitone@gna.org>

	* plugins/subtitleformats/timedtextauthoringformat1/timedtextauthoringformat1.cc:
	Fix bug #646371 (Debian) : broken handling of '<br />' tags.

2011-11-19  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/maxcharactersperline.h:
	Fix bug #14663 : Feature Request: Cut Line.

2011-11-16  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Add Video and Waveform recent files.

2011-11-16  kitone  <kitone@gna.org>

	* plugins/subtitleformats/advancedsubstationalpha/advancedsubstationalpha.cc:
	* plugins/subtitleformats/substationalpha/substationalpha.cc:
	Add the default ASS/SSA style in the config file.

2011-11-11  kitone  <kitone@gna.org>

	* src/we/waveformeditor.cc:
	Fix bug #18905 : Clic molette.
	Button2 only move the cursor, play with Shift.

2011-11-03  kitone  <kitone@gna.org>

	* src/subtitleview.cc:
	Fix bug #18903 : Durée du sous-titre incorrecte.

2011-11-03  kitone  <kitone@gna.org>

	* plugins/actions/changeframerate/changeframerate.cc:
	Fix bug #18904 : Change framerate.
