@@ -7,7 +7,7 @@
  *	http://home.gna.org/subtitleeditor/
  *	https://gna.org/projects/subtitleeditor/
  *
- *	Copyright @ 2005-2009, kitone
+ *	Copyright @ 2005-2012, kitone
  *
  *	This program is free software; you can redistribute it and/or modify
  *	it under the terms of the GNU General Public License as published by
@@ -110,9 +110,12 @@ public:
 	std::vector<Subtitle> get_selection();
 
 	/*
-	 *
 	 */
 	Subtitle get_first_selected();
+
+	/*
+	 */
+	Subtitle get_last_selected();
 
 	/*
 	 *
